--- a/cattoys.html
+++ b/cattoys.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
@@ -54,7 +54,6 @@
     </div></li>
   </ul>
 </nav>
-</nav>
 <p></p>
 <p></p>
 <p></p>
@@ -62,7 +61,7 @@
 <div class="card-area">
   <div class="card">
     <div class="picture-area">
-      <img class="picture" src="https://s7d2.scene7.com/is/image/PetSmart/5257778_alt1?$pdp-placeholder-desktop$"alt= "Best Selling Item">
+      <img class="picture" src="https://s7d2.scene7.com/is/image/PetSmart/5257778_alt1?$pdp-placeholder-desktop$" alt= "Best Selling Item">
     </div>
     <div class="pricing">
       $3.11
@@ -77,14 +76,13 @@
 <div class="card-area">
   <div class="card">
     <div class="picture-area">
-      <img class="picture" src="https://assets.petco.com/petco/image/upload/f_auto,q_auto/2387552-center-1"alt= "Toy" height="300" width="400">
+      <img class="picture" src="https://assets.petco.com/petco/image/upload/f_auto,q_auto/2387552-center-1" alt= "Toy" height="300" width="400">
     </div>
     <div class="pricing">
       $0.01 per toy
     </div>
   </div>
 
-</div>
 </div>
 <p></p>
 <p></p>
@@ -93,7 +91,7 @@
 <div class="card-area">
   <div class="card">
     <div class="picture-area">
-      <img class="picture" src="https://purewows3.imgix.net/images/articles/2019_09/3._Wrangler_Scratch_Mouse_.png?auto=format,compress&cs=strip"alt= "Toy" height="300" width="400">
+      <img class="picture" src="https://purewows3.imgix.net/images/articles/2019_09/3._Wrangler_Scratch_Mouse_.png?auto=format,compress&cs=strip" alt= "Toy" height="300" width="400">
     </div>
     <div class="pricing">
       $10.09
@@ -104,7 +102,7 @@
 <div class="card-area">
   <div class="card">
     <div class="picture-area">
-      <img class="picture" src="https://s7d2.scene7.com/is/image/PetSmart/5310585?$CLEARjpg$" height="350" width="300">
+      <img class="picture" src="https://s7d2.scene7.com/is/image/PetSmart/5310585?$CLEARjpg$" height="350" width="300" alt="">
     </div>
     <div class="pricing" >
       Thrills & Chills Halloween Candy Corn & Pumpkin Teaser Cat Toy - 2 Pack $9.99
@@ -114,7 +112,7 @@
 <div class="card-area">
   <div class="card">
     <div class="picture-area">
-      <img class="picture" src="https://s7d2.scene7.com/is/image/PetSmart/5305879?$CLEARjpg$" height="350" width="300">
+      <img class="picture" src="https://s7d2.scene7.com/is/image/PetSmart/5305879?$CLEARjpg$" height="350" width="300" alt="">
     </div>
     <div class="pricing" >
       Mad Cat Taco Cat Toy - Catnip, Silvervine, Plush $2.49
