--- a/dogcannedfood.html
+++ b/dogcannedfood.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
@@ -57,7 +57,7 @@
 <div class="card-area">
   <div class="card">
     <div class="picture-area">
-      <img class="picture" src="https://i5.walmartimages.com/asr/8454eef0-a41f-4b44-a806-504f1f386e8c_2.5a3943b6f8d7a9ceef3d61210742406b.jpeg?odnHeight=612&odnWidth=612&odnBg=FFFFFF"alt="dog canned food" height="200" width="300">
+      <img class="picture" src="https://i5.walmartimages.com/asr/8454eef0-a41f-4b44-a806-504f1f386e8c_2.5a3943b6f8d7a9ceef3d61210742406b.jpeg?odnHeight=612&odnWidth=612&odnBg=FFFFFF" alt="dog canned food" height="200" width="300">
     </div>
     <div class="pricing" >
       Pedigree Made With Chicken $5.99
@@ -67,7 +67,7 @@
 <div class="card-area">
   <div class="card">
     <div class="picture-area">
-      <img class="picture" src="https://img.chewy.com/is/image/catalog/100706_MAIN._AC_SL1500_V1572887281_.jpg"alt="dog canned food" height="200" width="300">
+      <img class="picture" src="https://img.chewy.com/is/image/catalog/100706_MAIN._AC_SL1500_V1572887281_.jpg" alt="dog canned food" height="200" width="300">
     </div>
     <div class="pricing" >
       Purina Mighty Dog Made With Lamb & Rice $4.99
@@ -77,7 +77,7 @@
 <div class="card-area">
   <div class="card">
     <div class="picture-area">
-      <img class="picture" src="https://assets.petco.com/petco/image/upload/f_auto,q_auto/657441-center-1" height="200" width="300">
+      <img class="picture" src="https://assets.petco.com/petco/image/upload/f_auto,q_auto/657441-center-1" height="200" width="300" alt="">
     </div>
     <div class="pricing" >
       Purina One Smartblend With Chicken & Brown Rice $10.99
@@ -87,7 +87,7 @@
 <div class="card-area">
   <div class="card">
     <div class="picture-area">
-      <img class="picture" src="https://img.chewy.com/is/image/catalog/155479_MAIN._AC_SL1500_V1627943200_.jpg" height="200" width="300">
+      <img class="picture" src="https://img.chewy.com/is/image/catalog/155479_MAIN._AC_SL1500_V1627943200_.jpg" height="200" width="300" alt="">
     </div>
     <div class="pricing" >
       Purina Dog Chow With Real Chicken $4.99
@@ -97,7 +97,7 @@
 <div class="card-area">
   <div class="card">
     <div class="picture-area">
-      <img class="picture" src="https://i.ebayimg.com/images/g/FpQAAOSw53Vgoh4o/s-l600.jpg" height="200" width="300">
+      <img class="picture" src="https://i.ebayimg.com/images/g/FpQAAOSw53Vgoh4o/s-l600.jpg" height="200" width="300" alt="">
     </div>
     <div class="pricing" >
       Purina Mighty Dog Gravy $3.99
