--- a/dogdryfood.html
+++ b/dogdryfood.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
@@ -57,7 +57,7 @@
 <div class="card-area">
     <div class="card">
         <div class="picture-area">
-            <img class="picture" src="https://m.media-amazon.com/images/I/91Z1i3zWcDL.jpg" height="350" width="300">
+            <img class="picture" src="https://m.media-amazon.com/images/I/91Z1i3zWcDL.jpg" height="350" width="300" alt="">
         </div>
         <div class="pricing" >
             Pedigree Grilled Steak & Vegetable Flavor $18.99
@@ -67,7 +67,7 @@
 <div class="card-area">
     <div class="card">
         <div class="picture-area">
-            <img class="picture" src="https://s7d2.scene7.com/is/image/PetSmart/5236843?$pdp-placeholder-desktop$" height="300" width="300">
+            <img class="picture" src="https://s7d2.scene7.com/is/image/PetSmart/5236843?$pdp-placeholder-desktop$" height="300" width="300" alt="">
         </div>
         <div class="pricing" >
             Great Choice Roasted Chicken, Rice & Vegetable Flavor $7.99
@@ -77,7 +77,7 @@
 <div class="card-area">
     <div class="card">
         <div class="picture-area">
-            <img class="picture" src="https://s7d2.scene7.com/is/image/PetSmart/5261732?$pdp-placeholder-desktop$" height="300" width="300">
+            <img class="picture" src="https://s7d2.scene7.com/is/image/PetSmart/5261732?$pdp-placeholder-desktop$" height="300" width="300" alt="">
         </div>
         <div class="pricing" >
             Pedigree Roasted Chicken, Rice & Vegetable Flavor For Big Dogs $10.99
@@ -87,7 +87,7 @@
 <div class="card-area">
     <div class="card">
         <div class="picture-area">
-            <img class="picture" src="https://www.purina.com/sites/g/files/auxxlc196/files/styles/kraken_product_carousel_regular/public/BF_IBBF_14LB_Front_CK20.png?itok=_SnN2DmN" height="350" width="300">
+            <img class="picture" src="https://www.purina.com/sites/g/files/auxxlc196/files/styles/kraken_product_carousel_regular/public/BF_IBBF_14LB_Front_CK20.png?itok=_SnN2DmN" height="350" width="300" alt="">
         </div>
         <div class="pricing" >
             Purina Beneful incrediBites For Small Dogs $15.98
@@ -97,7 +97,7 @@
 <div class="card-area">
     <div class="card">
         <div class="picture-area">
-            <img class="picture" src="https://www.bigw.com.au/medias/sys_master/images/images/h5b/he3/12171960090654.jpg" height="350" width="400">
+            <img class="picture" src="https://www.bigw.com.au/medias/sys_master/images/images/h5b/he3/12171960090654.jpg" height="350" width="400" alt="">
         </div>
         <div class="pricing" >
             My Dog Premium Food $10.99
