--- a/fishwatertreatment.html
+++ b/fishwatertreatment.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
@@ -57,7 +57,7 @@
 <div class="card-area">
   <div class="card">
     <div class="picture-area">
-      <img class="picture" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT2NkMEc8-Z0csDJAQA7uq7L5i0ZM9JP9De3w&usqp=CAU"alt="Wet cat food" height="300" width="300">
+      <img class="picture" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT2NkMEc8-Z0csDJAQA7uq7L5i0ZM9JP9De3w&usqp=CAU" alt="Wet cat food" height="300" width="300">
     </div>
     <div class="pricing">
       Aqueon Water Conditioner  - $7.58 (16 OZ)
@@ -68,7 +68,7 @@
 <div class="card-area">
   <div class="card">
     <div class="picture-area">
-      <img class="picture" src="https://i5.walmartimages.com/asr/589d68de-edba-409e-97b1-20000e221cdc_1.439149389422b83f7d0f0c9255440945.jpeg"alt="Wet cat food" height="300" width="300">
+      <img class="picture" src="https://i5.walmartimages.com/asr/589d68de-edba-409e-97b1-20000e221cdc_1.439149389422b83f7d0f0c9255440945.jpeg" alt="Wet cat food" height="300" width="300">
     </div>
     <div class="pricing">
       Tetra AquaSafe Tap Water Conditioner - $12.98 (16.9 OZ)
@@ -80,7 +80,7 @@
 <div class="card-area">
   <div class="card">
     <div class="picture-area">
-      <img class="picture" src="https://i5.walmartimages.com/asr/1e41c1a1-e86b-4696-ada9-cf62067df6d3_1.4ed6a30d67bd3fe9dc2afe707cf17666.jpeg?odnHeight=612&odnWidth=612&odnBg=FFFFFF"alt="Wet cat food" height="300" width="300">
+      <img class="picture" src="https://i5.walmartimages.com/asr/1e41c1a1-e86b-4696-ada9-cf62067df6d3_1.4ed6a30d67bd3fe9dc2afe707cf17666.jpeg?odnHeight=612&odnWidth=612&odnBg=FFFFFF" alt="Wet cat food" height="300" width="300">
     </div>
     <div class="pricing">
       Tetra AlgeaControl - $4.99 (1.69 OZ)
@@ -90,7 +90,7 @@
 <div class="card-area">
   <div class="card">
     <div class="picture-area">
-      <img class="picture" src="https://spectrum-sitecore-spectrumbrands.netdna-ssl.com/~/media/Pet/Tetra/Images/Learning%20Centers/Fish%20Learning%20Center/16168_TASP100ml_1110.png"alt="Wet cat food" height="300" width="300">
+      <img class="picture" src="https://spectrum-sitecore-spectrumbrands.netdna-ssl.com/~/media/Pet/Tetra/Images/Learning%20Centers/Fish%20Learning%20Center/16168_TASP100ml_1110.png" alt="Wet cat food" height="300" width="300">
     </div>
     <div class="pricing">
       Tetra AquaSafe Plus - $5.99 (8.45 OZ)
@@ -100,7 +100,7 @@
 <div class="card-area">
   <div class="card">
     <div class="picture-area">
-      <img class="picture" src="https://assets.petco.com/petco/image/upload/c_pad,dpr_1.0,f_auto,q_auto,h_636,w_636/c_pad,h_636,w_636/1083694-center-1"alt="Wet cat food" height="300" width="300">
+      <img class="picture" src="https://assets.petco.com/petco/image/upload/c_pad,dpr_1.0,f_auto,q_auto,h_636,w_636/c_pad,h_636,w_636/1083694-center-1" alt="Wet cat food" height="300" width="300">
     </div>
     <div class="pricing">
       Aqueon Water Clarifier - $5.99 (4.0 OZ)
