--- a/reptilecages.html
+++ b/reptilecages.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
@@ -57,7 +57,7 @@
 <div class="card-area">
     <div class="card">
         <div class="picture-area">
-            <img class="picture" src="https://s7d2.scene7.com/is/image/PetSmart/5175703?$CLEARjpg$" height="350" width="300">
+            < img class="picture" src="https://s7d2.scene7.com/is/image/PetSmart/5175703?$CLEARjpg$" height="350" width="300">
         </div>
         <div class="pricing" >
             Exo-Terra® Natural Terrarium Reptile Habitat $169.99
@@ -67,7 +67,7 @@
 <div class="card-area">
     <div class="card">
         <div class="picture-area">
-            <img class="picture" src="https://s7d2.scene7.com/is/image/PetSmart/5290979?$CLEARjpg$" height="350" width="300">
+            < img class="picture" src="https://s7d2.scene7.com/is/image/PetSmart/5290979?$CLEARjpg$" height="350" width="300">
         </div>
         <div class="pricing" >
             Thrive Desert Reptile Terrarium Essentials Kit - 20 Gallon $179.99
@@ -77,7 +77,7 @@
 <div class="card-area">
     <div class="card">
         <div class="picture-area">
-            <img class="picture" src="https://s7d2.scene7.com/is/image/PetSmart/5290981?$CLEARjpg$" height="350" width="300">
+            < img class="picture" src="https://s7d2.scene7.com/is/image/PetSmart/5290981?$CLEARjpg$" height="350" width="300">
         </div>
         <div class="pricing" >
             Thrive Tropical Reptile Vertical Hexagon Terrarium -20 Gallon $99.99
@@ -87,7 +87,7 @@
 <div class="card-area">
     <div class="card">
         <div class="picture-area">
-            <img class="picture" src="https://s7d2.scene7.com/is/image/PetSmart/5300275?$CLEARjpg$" height="350" width="300">
+            < img class="picture" src="https://s7d2.scene7.com/is/image/PetSmart/5300275?$CLEARjpg$" height="350" width="300">
         </div>
         <div class="pricing" >
             Thrive Easy Clean Terrarium $99.99
@@ -97,7 +97,7 @@
 <div class="card-area">
     <div class="card">
         <div class="picture-area">
-            <img class="picture" src="https://s7d2.scene7.com/is/image/PetSmart/5290983?$CLEARjpg$" height="350" width="300">
+            < img class="picture" src="https://s7d2.scene7.com/is/image/PetSmart/5290983?$CLEARjpg$" height="350" width="300">
         </div>
         <div class="pricing" >
             Thrive Tropical Reptile Terrarium Essentials Kit - 30 Gallon $169.99
