--- a/reptileheatandhumidity.html
+++ b/reptileheatandhumidity.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
@@ -57,7 +57,7 @@
 <div class="card-area">
   <div class="card">
     <div class="picture-area">
-      <img class="picture" src="https://s7d2.scene7.com/is/image/PetSmart/1851430?$CLEARjpg$" height="350" width="300">
+      <img class="picture" src="https://s7d2.scene7.com/is/image/PetSmart/1851430?$CLEARjpg$" height="350" width="300" alt="">
     </div>
     <div class="pricing" >
       Zoo Med Repti Therm Reptile Under Tank Heater $21.99
@@ -67,7 +67,7 @@
 <div class="card-area">
   <div class="card">
     <div class="picture-area">
-      <img class="picture" src="https://s7d2.scene7.com/is/image/PetSmart/5290918?$CLEARjpg$" height="350" width="300">
+      <img class="picture" src="https://s7d2.scene7.com/is/image/PetSmart/5290918?$CLEARjpg$" height="350" width="300" alt="">
     </div>
     <div class="pricing" >
       Thrive Reptile Heating Mat $38.99
@@ -77,7 +77,7 @@
 <div class="card-area">
   <div class="card">
     <div class="picture-area">
-      <img class="picture" src="https://s7d2.scene7.com/is/image/PetSmart/5290756?$CLEARjpg$" height="350" width="300">
+      <img class="picture" src="https://s7d2.scene7.com/is/image/PetSmart/5290756?$CLEARjpg$" height="350" width="300" alt="">
     </div>
     <div class="pricing" >
       Zoo Med Paludarium Heater $13.99
@@ -87,7 +87,7 @@
 <div class="card-area">
   <div class="card">
     <div class="picture-area">
-      <img class="picture" src="https://s7d2.scene7.com/is/image/PetSmart/5017596?$CLEARjpg$" height="350" width="300">
+      <img class="picture" src="https://s7d2.scene7.com/is/image/PetSmart/5017596?$CLEARjpg$" height="350" width="300" alt="">
     </div>
     <div class="pricing" >
       Zoo Med Nocturnal Infrared Heat Lamp $9.99
@@ -97,7 +97,7 @@
 <div class="card-area">
   <div class="card">
     <div class="picture-area">
-      <img class="picture" src="https://s7d2.scene7.com/is/image/PetSmart/5300312?$CLEARjpg$" height="350" width="300">
+      <img class="picture" src="https://s7d2.scene7.com/is/image/PetSmart/5300312?$CLEARjpg$" height="350" width="300" alt="">
     </div>
     <div class="pricing" >
       Thrive Digital Thermometer with Probe $5.07
