--- a/smallpetcages.html
+++ b/smallpetcages.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
@@ -57,7 +57,7 @@
 <div class="card-area">
   <div class="card">
     <div class="picture-area">
-      <img class="picture" src="https://s7d2.scene7.com/is/image/PetSmart/5289304" height="350" width="300">
+      <img class="picture" src="https://s7d2.scene7.com/is/image/PetSmart/5289304" height="350" width="300" alt="">
     </div>
     <div class="pricing" >
       All Living Things Small Animal Home $38.69
@@ -67,7 +67,7 @@
 <div class="card-area">
   <div class="card">
     <div class="picture-area">
-      <img class="picture" src="https://s7d2.scene7.com/is/image/PetSmart/5169963?$CLEARjpg$" height="350" width="300">
+      <img class="picture" src="https://s7d2.scene7.com/is/image/PetSmart/5169963?$CLEARjpg$" height="350" width="300" alt="">
     </div>
     <div class="pricing" >
       WARE Chew Proof High Rise Small Pet Habitat $49.99
@@ -77,7 +77,7 @@
 <div class="card-area">
   <div class="card">
     <div class="picture-area">
-      <img class="picture" src="https://s7d2.scene7.com/is/image/PetSmart/5282073?$CLEARjpg$" height="350" width="300">
+      <img class="picture" src="https://s7d2.scene7.com/is/image/PetSmart/5282073?$CLEARjpg$" height="350" width="300" alt="">
     </div>
     <div class="pricing" >
       All Living Things Tiny Tales Comfy House Small Pet Habitat $42.96
@@ -87,7 +87,7 @@
 <div class="card-area">
   <div class="card">
     <div class="picture-area">
-      <img class="picture" src="https://s7d2.scene7.com/is/image/PetSmart/5282308?$CLEARjpg$" height="350" width="300">
+      <img class="picture" src="https://s7d2.scene7.com/is/image/PetSmart/5282308?$CLEARjpg$" height="350" width="300" alt="">
     </div>
     <div class="pricing" >
       All Living Things Tiny Tales Amusement Park Small Pet Habitat 56.99
@@ -97,7 +97,7 @@
 <div class="card-area">
   <div class="card">
     <div class="picture-area">
-      <img class="picture" src="https://s7d2.scene7.com/is/image/PetSmart/5251488?$CLEARjpg$" height="350" width="300">
+      <img class="picture" src="https://s7d2.scene7.com/is/image/PetSmart/5251488?$CLEARjpg$" height="350" width="300" alt="">
     </div>
     <div class="pricing" >
       WARE Chew Proof 4 Story Small Pet Cage $29.99
