--- a/fishfood.html
+++ b/fishfood.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
@@ -59,7 +59,7 @@
 <div class="card-area">
     <div class="card">
         <div class="picture-area">
-            <img class="picture" src="https://i5.walmartimages.com/asr/01d10ef8-466b-4a1e-9c7e-237e26d4dc41_1.9a225c4144d51f7580b992915c63302d.jpeg"alt="Wet cat food" height="300" width="300">
+            <img class="picture" src="https://i5.walmartimages.com/asr/01d10ef8-466b-4a1e-9c7e-237e26d4dc41_1.9a225c4144d51f7580b992915c63302d.jpeg" alt="Wet cat food" height="300" width="300">
         </div>
         <div class="pricing">
             Tetra Golfish Flakes - $15.99 (7.06 OZ)
@@ -69,7 +69,7 @@
 <div class="card-area">
     <div class="card">
         <div class="picture-area">
-            <img class="picture" src="https://i5.walmartimages.com/asr/76141998-1b58-403b-8fa1-0d4c2499be09_1.e3184533cdad3bdfa6f4fb61e1365213.jpeg?odnHeight=612&odnWidth=612&odnBg=FFFFFF"alt="Wet cat food" height="300" width="300">
+            <img class="picture" src="https://i5.walmartimages.com/asr/76141998-1b58-403b-8fa1-0d4c2499be09_1.e3184533cdad3bdfa6f4fb61e1365213.jpeg?odnHeight=612&odnWidth=612&odnBg=FFFFFF" alt="Wet cat food" height="300" width="300">
         </div>
         <div class="pricing">
             Tetra Cichlid Crisps - $12.73 (8.50 OZ)
@@ -79,7 +79,7 @@
 <div class="card-area">
     <div class="card">
         <div class="picture-area">
-            <img class="picture" src="https://img.chewy.com/is/image/catalog/98255_MAIN._AC_SL1500_V1550179806_.jpg"alt="Wet cat food" height="300" width="300">
+            <img class="picture" src="https://img.chewy.com/is/image/catalog/98255_MAIN._AC_SL1500_V1550179806_.jpg" alt="Wet cat food" height="300" width="300">
         </div>
         <div class="pricing">
             Tetra BettaMin Betta Pellets - $2.99 (1.02 OZ)
@@ -89,7 +89,7 @@
 <div class="card-area">
     <div class="card">
         <div class="picture-area">
-            <img class="picture" src="https://i5.walmartimages.com/asr/76141998-1b58-403b-8fa1-0d4c2499be09_1.e3184533cdad3bdfa6f4fb61e1365213.jpeg?odnHeight=612&odnWidth=612&odnBg=FFFFFF"alt="Wet cat food" height="300" width="300">
+            <img class="picture" src="https://i5.walmartimages.com/asr/76141998-1b58-403b-8fa1-0d4c2499be09_1.e3184533cdad3bdfa6f4fb61e1365213.jpeg?odnHeight=612&odnWidth=612&odnBg=FFFFFF" alt="Wet cat food" height="300" width="300">
         </div>
         <div class="pricing">
             Tetra TetraMin Tropical FIsh XL Flakes - $7.99 (2.89 OZ)
@@ -99,7 +99,7 @@
 <div class="card-area">
     <div class="card">
         <div class="picture-area">
-            <img class="picture" src="https://assets.petco.com/petco/image/upload/f_auto,q_auto/2685736-center-1"alt="Wet cat food" height="300" width="300">
+            <img class="picture" src="https://assets.petco.com/petco/image/upload/f_auto,q_auto/2685736-center-1" alt="Wet cat food" height="300" width="300">
         </div>
         <div class="pricing">
             API Pond Fish Food (Koi and Goldfish) - $16.59 (1.56 LBS)
