--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
@@ -20,14 +20,14 @@
                     <li><a href="catdryfood.html">Dry Food</a> </li>
                     <li><a href="cattoys.html">Toys</a> </li>
                 </ul>
-        <li><a href="dog.html">Dog</a>
-            <div class="dropdown-content">
-                <ul>
-                    <li><a href="dogcannedfood.html">Canned Food</a> </li>
-                    <li><a href="dogdryfood.html">Dry Food</a> </li>
-                    <li><a href="dogtoys.html">Toys</a> </li>
-                </ul>
-            </div></li>
+        <li> <a href="dog.html">Dog</a>
+        <div class="dropdown-content">
+            <ul>
+                <li><a href="dogcannedfood.html">Canned Food</a> </li>
+                <li><a href="dogdryfood.html">Dry Food</a> </li>
+                <li><a href="dogtoys.html">Toys</a> </li>
+            </ul>
+        </div></li>
         <li><a href="fish.html" >Fish</a>
             <div class="dropdown-content">
                 <ul>
@@ -60,7 +60,7 @@
 <div class="card-area">
     <div class="cardbestselling">
         <div class="picture-area">
-            <img class="picturebestselling" src="https://api.freelogodesign.org/files/ae05d1294ca64752844315c8f8af12be/thumb/logo_200x200.png?v=0"alt= "Best Selling Item">
+            <img class="picturebestselling" src="https://api.freelogodesign.org/files/ae05d1294ca64752844315c8f8af12be/thumb/logo_200x200.png?v=0" alt= "Best Selling Item">
         </div>
         <div class="bestselling">
 
