--- a/smallpetfood.html
+++ b/smallpetfood.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
@@ -59,7 +59,7 @@
 <div class="card-area">
     <div class="card">
         <div class="picture-area">
-            <img class="picture" src="https://m.media-amazon.com/images/I/81FBlbvE6oL._AC_SL1500_.jpg"alt="Wet cat food" height="400" width="300">
+            <img class="picture" src="https://m.media-amazon.com/images/I/81FBlbvE6oL._AC_SL1500_.jpg" alt="Wet cat food" height="400" width="300">
         </div>
         <div class="pricing">
             Kaytee Forti-Diet Guinea Pig Food - $8.83 (5 LBS)
@@ -69,7 +69,7 @@
 <div class="card-area">
     <div class="card">
         <div class="picture-area">
-            <img class="picture" src="https://assets.petco.com/petco/image/upload/f_auto,q_auto/2164607-center-1"alt="Wet cat food" height="300" width="300">
+            <img class="picture" src="https://assets.petco.com/petco/image/upload/f_auto,q_auto/2164607-center-1" alt="Wet cat food" height="300" width="300">
         </div>
         <div class="pricing">
             Kaytee Complete Rabbit Food  - $19.99 (9.5 LBS)
@@ -79,7 +79,7 @@
 <div class="card-area">
     <div class="card">
         <div class="picture-area">
-            <img class="picture" src="https://cdn11.bigcommerce.com/s-268c8/images/stencil/1280x1280/products/61/493/adult_chinchilla_food_4lb_front__90661.1567425217.jpg?c=2"alt="Wet cat food" height="400" width="300">
+            <img class="picture" src="https://cdn11.bigcommerce.com/s-268c8/images/stencil/1280x1280/products/61/493/adult_chinchilla_food_4lb_front__90661.1567425217.jpg?c=2" alt="Wet cat food" height="400" width="300">
         </div>
         <div class="pricing">
             SherWood Pet Health Adult Chinchilla Food - $19.99 (4.5 LBS)
@@ -89,7 +89,7 @@
 <div class="card-area">
     <div class="card">
         <div class="picture-area">
-            <img class="picture" src="https://s7d2.scene7.com/is/image/PetSmart/5283602?$CLEARjpg$"alt="Wet cat food" height="400" width="300">
+            <img class="picture" src="https://s7d2.scene7.com/is/image/PetSmart/5283602?$CLEARjpg$" alt="Wet cat food" height="400" width="300">
         </div>
         <div class="pricing">
             All Living Things The Power of 5 Chinchilla Diet - $12.99 (4 LBS)
@@ -99,7 +99,7 @@
 <div class="card-area">
     <div class="card">
         <div class="picture-area">
-            <img class="picture" src="https://images.heb.com/is/image/HEBGrocery/001710946"alt="Wet cat food" height="300" width="300">
+            <img class="picture" src="https://images.heb.com/is/image/HEBGrocery/001710946" alt="Wet cat food" height="300" width="300">
         </div>
         <div class="pricing">
             Encore Hamster And Gerbil Food - $3.99 (2 LBS)
